Make about us the marketing section

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div id="navigationbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#">Home</a></li>
-            <li class=""><a href="#menu">Menu</a></li>
             <li><a href="#about">About us</a></li>
+            <li class=""><a href="#menu">Menu</a></li>
           </ul>
           <div class="navbar-right">
           <div class="nav navbar-nav">
@@ -117,7 +117,7 @@
     </div>
 
     <!-- Opening Hours, Location, Follow us -->
-    <div class="container text-center marketing">
+    <div class="container text-center marketing" id="about">
 
       <h2 class="featurette-heading grignoteLogo"><img src="img/grignotepup.png" style="width: 50px; margin-right: 10px;">La Grignote<br></h2>
       <h3><span class="text-muted">Key West, FL</span></h3>
