bread loaf > country bread

--- a/index.html
+++ b/index.html
@@ -197,12 +197,13 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">A full array of sandwiches and salads. <span class="text-muted">On our signature bread loaf.</span></h2>
+          <h2 class="featurette-heading">A full array of sandwiches and salads. <span class="text-muted">On our signature country bread.</span></h2>
           <p class="lead">We have an outdoor patio as well as indoor seating. We have daily specials.
           </p>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 text-center">
           <img class="grignoteMarketingImg featurette-image img-responsive center-block img-circle" src="img/bab/baked_camembert.JPG" alt="Generic placeholder image">
+              <p><strong>Daily Special: Baked camembert with herbs and tomato melted on our country bread.</strong></p><br>
         </div>
       </div>
 
