--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href="carousel.css" rel="stylesheet">
     <link href="bootstrap-social.css" rel="stylesheet">
     <link href="grignote.css" rel="stylesheet">
+    <link href="grignoteico.png" rel="icon" type="image/png">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
