Add another row to the definition kaleidoscope

--- a/index.html
+++ b/index.html
@@ -255,6 +255,22 @@
         </div>
       </div>
 
+      <div class="row featurette text-center">
+        <div class="col-sm-4">
+          <img src="img/gaufre.jpg" alt="People" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+          <p><strong>Belgian Waffle</strong></p><br>
+        </div>
+        <div class="col-sm-4">
+        <img src="img/chefsalad.jpg" alt="Coffee" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+        <p><strong>Chef Odoux's Salad</strong></p><br>
+        </div>
+        <div class="col-sm-4">
+        <img src="img/quiche.jpg" alt="Pup" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+        <p><strong>Quiche</strong></p><br>
+        </div>
+      </div>
+
+
       <hr class="featurette-divider">
 
     </div> <!-- container marketing-->
