--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       
         <div class = "panel panel-default">
           <div class="panel-heading">
-              <h3 class="panel-title">Belgium Waffle
+              <h3 class="panel-title">Belgian Waffle
                 <span class = "badge pull-right" style="color:#291a0f;background-color:#ead7c8"> $8.50</span>
               </h3>
           </div>
