--- a/index.html
+++ b/index.html
@@ -477,6 +477,11 @@
                 Cappucino
               </li>
               <li class = "list-group-item">
+                <span class="pull-right"> 16oz: <span class = "badge">$4.95</span></span>
+                <span class="pull-right"> 12oz: <span class = "badge">$4.10</span></span>
+                Moka
+              </li>
+              <li class = "list-group-item">
                 <span class = "badge pull-right"> $1.00</span>
                 Add Soy
               </li>
