--- a/index.html
+++ b/index.html
@@ -242,15 +242,15 @@
 
       <div class="row featurette text-center">
         <div class="col-sm-4">
-          <img src="img/bab/pastry1.jpg" alt="People" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+          <img src="img/bab/pastry1.JPG" alt="People" class="featurette-image img-responsive center-block img-circle" style="width:50%">
           <p><strong>Feta Spinach Galette</strong></p><br>
         </div>
         <div class="col-sm-4">
-        <img src="img/bab/pastry2.jpg" alt="Coffee" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+        <img src="img/bab/pastry2.JPG" alt="Coffee" class="featurette-image img-responsive center-block img-circle" style="width:50%">
         <p><strong>Daily Special: Baked egg cup with bacon.</strong></p><br>
         </div>
         <div class="col-sm-4">
-        <img src="img/bab/pastry3.jpg" alt="Pup" class="featurette-image img-responsive center-block img-circle" style="width:50%">
+        <img src="img/bab/pastry3.JPG" alt="Pup" class="featurette-image img-responsive center-block img-circle" style="width:50%">
         <p><strong>Goat Cheese Cherry Tomato Galette</strong></p><br>
         </div>
       </div>
