--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
       <h3><span class="text-muted">Key West, FL</span></h3>
       <p class="lead">La Grignote is an Artisan French Bakery - Café – Bistro that offers a selection of home made Viennoiseries-Pastries-Bread-Sandwiches and Salads. Everything is made from scratch.</p>
 
+      <p><a class="btn btn-lg btn-primary" href="#menu" role="button">See our Menu</a></p>
+
       <hr class="featurette-divider">
 
       <div class="row featurette">
@@ -271,11 +273,11 @@
       </div>
 
 
-      <hr class="featurette-divider">
+      <hr class="featurette-divider" id="menu">
 
     </div> <!-- container marketing-->
 
-    <div class="container marketing" id="menu">
+    <div class="container marketing">
     
     <div class="row">
       <div class="col-md-6">
