Make call a button.

--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
                 1211 Duval St,<BR>
                 Key West, FL, 33040,<BR>
                 USA<BR>
-                <i class="fa fa-phone" aria-hidden="true"></i> (305) 916-5445<BR>
+               <BR>
+                <p><a class="btn btn-lg btn-success" href="" role="button"> <i class="fa fa-phone" aria-hidden="true"></i> (305) 916-5445</a></p>
+
                 <BR>
               </div>
           </div>
