--- a/index.html
+++ b/index.html
@@ -593,29 +593,8 @@
 
     <!-- Map -->
 
-    <!-- Set height and width with CSS -->
-    <div id="googleMap" style="height:400px;width:100%;"></div>
-
-    <!-- Add Google Maps -->
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
-    <script>
-    var laGrignoteGPS = new google.maps.LatLng(24.549287, -81.797451);
-
-    function initialize() {
-      var mapProp = { 
-        center:laGrignoteGPS, zoom:14, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP
-      };
-
-      var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-
-      var marker = new google.maps.Marker({
-        position:laGrignoteGPS,
-      });
-
-      marker.setMap(map);
-    }
-    google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
+<iframe width="100%" height="400" frameborder="0" style="border:0"
+src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJf6Er3Ny20YgR3KM64yEocIU&key=AIzaSyB76G7AkJCNjk50citFusaKXW5rueGxMto" allowfullscreen></iframe>
 
     <footer class="container" style="margin-top: 20px">
       <p class="pull-right"><a href="#">Back to top</a></p>
