--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                 <p><strong>Location</strong></p><br>
                 1211 Duval St,<BR>
                 Key West, FL, 33040,<BR>
-                USA<BR>
-               <BR>
+                USA<BR><BR>
+                <p><a class="btn btn-lg btn-primary" href="https://maps.apple.com/maps?address=1211%20Duval%20St,%20Key%20West,%20FL%20%2033040,%20United%20States&auid=12761092680020143102&ll=24.548973,-81.797487&lsp=9902&q=La%20Grignote" role="button"> <i class="fa fa-map-marker" aria-hidden="true" style="color:rgb(243,80,60);"></i> Open in Maps</a></p>
                 <p><a class="btn btn-lg btn-success" href="tel:3059165445" role="button"> <i class="fa fa-phone" aria-hidden="true"></i> (305) 916-5445</a></p>
 
                 <BR>
