Update hours look

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             <div class = "panel panel-default grignoteBorder">
               <h1><i class="fa fa-clock-o grignoteBackground" aria-hidden="true"></i></h1>
               <p><strong>Opening Hours</strong></p><br>
-              Tuesday-Sunday : 7AM - 5PM<BR>
-              Monday: Closed<BR>
+              Tuesday - Sunday : <h1>7AM - 5PM</h1><BR>
+              <strong>Closed</strong> on Mondays<BR>
               <BR>
               <BR>
               <BR>
