--- a/index.html
+++ b/index.html
@@ -599,5 +599,16 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJf6Er3Ny20YgR3KM64
     <footer class="container" style="margin-top: 20px">
       <p>&copy; 2016 La Grignote, Inc. &middot;  dev by <a href="http://papatango.io">papatango.io</a></p>
     </footer>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-86467272-1', 'auto');
+  ga('send', 'pageview');
+</script>
+
   </body>
 </html>
