--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>La Grignote Artisan French Bakery, Key West, FL</title>
+    <title>La Grignote Artisan French Bakery and Bistro, Key West, FL</title>
+    <meta name="description" content="La Grignote is an Artisan French Bakery - Café – Bistro that offers a selection of homemade Viennoiseries Pastries Bread Sandwiches and Salads. Everything is made from scratch. Great for breakfast, brunch, lunch. We make the full spectrum of espresso drinks. We have an outdoor and indoor patio. free wifi. We are on Duval street in Key West, Florida.">
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
