Follow us > Find us

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="col-sm-4">
             <div class = "panel panel-default grignoteBorder">
               <h1><i class="fa fa-instagram grignoteBackground" aria-hidden="true"></i></h1>
-              <p><strong>Follow us</strong></p><br>
+              <p><strong>Find us on</strong></p><br>
               <a href="https://www.instagram.com/lagrignote/"> 
                 <h4 style="margin-top: 0px"><i class="fa fa-instagram" aria-hidden="true"></i> instagram</h3>
               </a>
