Add Facebook and trip advisor

--- a/index.html
+++ b/index.html
@@ -159,10 +159,16 @@
               <h1><i class="fa fa-instagram grignoteBackground" aria-hidden="true"></i></h1>
               <p><strong>Find us on</strong></p><br>
               <a href="https://www.instagram.com/lagrignote/"> 
-                <h4 style="margin-top: 0px"><i class="fa fa-instagram" aria-hidden="true"></i> instagram</h3>
+                <h3 style="margin-top: 0px"><i class="fa fa-instagram" aria-hidden="true"></i> instagram</h3>
               </a>
               <a href="https://www.yelp.com/biz/la-grignote-key-west"> 
-                <h4><i class="fa fa-yelp aria-hidden="true"></i> yelp</h3>
+                <h3><i class="fa fa-yelp aria-hidden="true"></i> yelp</h3>
+              </a>
+              <a href="https://www.facebook.com/La-Grignote-170784603348283/">
+                <h3><i class="fa fa-facebook aria-hidden="true"></i> facebook</h3>              
+              </a>
+              <a href="https://www.tripadvisor.com/Restaurant_Review-g34345-d11441374-Reviews-La_Grignote-Key_West_Florida_Keys_Florida.html">
+                <h3><i class="fa fa-tripadvisor aria-hidden="true"></i> tripadvisor</h3>              
               </a>
               <BR>
               <BR>
