--- a/index.html
+++ b/index.html
@@ -53,11 +53,20 @@
           </ul>
           <div class="navbar-right">
           <div class="nav navbar-nav">
+          <h2 style="margin-top: 5px; margin-left: 20px;">
             <a href="https://www.instagram.com/lagrignote/">
-              <h2 style="margin-top: 5px"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href="https://www.yelp.com/biz/la-grignote-key-west"> 
-              <i class="fa fa-yelp aria-hidden="true"></i></h2>
+              <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
+            <a href="https://www.yelp.com/biz/la-grignote-key-west"> 
+              <i class="fa fa-yelp aria-hidden="true"></i>
+            </a>
+            <a href="https://www.facebook.com/La-Grignote-170784603348283/"> 
+              <i class="fa fa-facebook aria-hidden="true"></i>
+            </a>
+            <a href="https://www.tripadvisor.com/Restaurant_Review-g34345-d11441374-Reviews-La_Grignote-Key_West_Florida_Keys_Florida.html"> 
+              <i class="fa fa-tripadvisor aria-hidden="true"></i>
+            </a>
+          </h2>
           </div>
           </div>
         </div><!--/.nav-collapse  -->
