Fix spelling - thanks Frances!

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
       <h2 class="featurette-heading grignoteLogo"><img src="img/grignotepup.png" style="width: 50px; margin-right: 10px;">La Grignote<br></h2>
       <h3><span class="text-muted">Key West, FL</span></h3>
-      <p class="lead">La Grignote is an Artisan French Bakery - Café – Bistro that offers a selection of home made Viennoiseries-Pastries-Bread-Sandwiches and Salads. Everything is made from scratch.</p>
+      <p class="lead">La Grignote is an Artisan French Bakery - Café – Bistro that offers a selection of homemade Viennoiseries-Pastries-Bread-Sandwiches and Salads. Everything is made from scratch.</p>
 
       <p><a class="btn btn-lg btn-primary" href="#menu" role="button">See our Menu</a></p>
 
@@ -193,7 +193,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Stop by for lunch. <span class="text-muted">Or just for an espresso.</span></h2>
-          <p class="lead">We serve breakfast, lunch, coffees, home made iced tea, fresh squeezed orange juice, lemonade and sodas. We are also great for brunch. <a href="#menu">See our menu.</a></p>
+          <p class="lead">We serve breakfast, lunch, coffees, homemade iced tea, fresh squeezed orange juice, lemonade and sodas. We are also great for brunch. <a href="#menu">See our menu.</a></p>
         </div>
         <div class="col-md-5">
           <img class="grignoteMarketingImg featurette-image img-responsive center-block img-circle" src="img/french_pastries.jpg" alt="Generic placeholder image">
@@ -352,19 +352,19 @@
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> +$2.00</span>
-              Home made Nutella
+              Homemade Nutella
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> +$2.00</span>
-              Home made Jam
+              Homemade Jam
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> +$2.00</span>
-              Home made Chantilly
+              Homemade Chantilly
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> +$2.00</span>
-              Home Made Granola
+              Homemade Granola
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> +$2.00</span>
@@ -376,7 +376,7 @@
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> +$2.00</span>
-              Home made ricotta
+              Homemade Ricotta
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> +$2.00</span>
@@ -393,11 +393,11 @@
           <ul class="list-group">
             <li class = "list-group-item">
               <span class = "badge pull-right"> $3.75</span>
-              Home made basil lemonade
+              Homemade basil lemonade
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $4.75</span>
-              Fresh squeezed orange juice
+              Fresh squeezed Orange Juice
             </li>
           </ul>
         </div>
@@ -411,7 +411,7 @@
             <ul class="list-group">
               <li class = "list-group-item">
                 <span class = "badge pull-right"> $4.50</span>
-                Ham and Chesse croissant
+                Ham and Chesse Croissant
               </li>
               <li class = "list-group-item">
                 <span class = "badge pull-right"> $5.50</span>
@@ -445,10 +445,10 @@
                 Fresh Squeezed Orange Juice
               </li>
               <li class = "list-group-item">
-                Slice of artisan bread toasted with home made jam and butter
+                Slice of artisan bread toasted with homemade jam and butter
               </li>
               <li class = "list-group-item">
-                Greek yogurt with market berries, orange blossom honey, pistachio and home made granola
+                Greek yogurt with market berries, orange blossom honey, pistachio and homemade granola
               </li>
             </ul>
         </div>
@@ -490,7 +490,7 @@
               </li>
               <li class = "list-group-item">
                 <span class = "badge pull-right"> $5.10</span>
-                Home made Hot Chocolate
+                Homemade Hot Chocolate
               </li>
               <li class = "list-group-item">
                 <span class = "badge pull-right"> $4.10</span>
@@ -499,15 +499,15 @@
               <li class = "list-group-item">
                 <span class="pull-right"> 16oz: <span class = "badge">$4.95</span></span>
                 <span class="pull-right"> 12oz: <span class = "badge">$4.10</span></span>
-                Moka
+                Mocha
               </li>
               <li class = "list-group-item">
                 <span class = "badge pull-right"> $1.00</span>
-                Add Soy
+                Add Soy Milk
               </li>
               <li class = "list-group-item">
                 <span class = "badge pull-right"> $.50</span>
-                Add Vanilla flavor
+                Add Vanilla Flavor
               </li>
             </ul>
           </div> <!-- panel -->
@@ -521,13 +521,13 @@
               <h3 class="panel-title">Sandwiches</h3>
             </div>
             <div class="panel-body">
-            served on Artisan Bread with a Side Salad
+            Served on Artisan Bread with a Side Salad
             </div>
             <ul class="list-group">
             <li class = "list-group-item">
               <span class = "badge pull-right"> $11.50</span>
-              <strong class="panel-title">Mediterraneen Sandwich</strong><br>
-               Home made tapenade – Goat cheese – Sliced Tomato – Herbes de Provence. 
+              <strong class="panel-title">Mediterranean Sandwich</strong><br>
+               Homemade tapenade – Goat cheese – Sliced Tomato – Herbes de Provence. 
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $11.50</span>
@@ -561,13 +561,13 @@
               <h3 class="panel-title">Salads</h3>
             </div>
             <div class="panel-body">
-            served with Artisan Bread and Home made Dressing
+            Served with Artisan Bread and Homemade Dressing
             </div>
             <ul class="list-group">
             <li class = "list-group-item">
               <span class = "badge pull-right"> $13.50</span>
               <strong class="panel-title">Chef’s Salad</strong><br>
-              Spring Mix – Black Ham Forest – Gruyere – Boiled eggs
+              Spring Mix – Black Ham Forest – Gruy&aecute;re – Boiled Eggs
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $11.50</span>
@@ -576,13 +576,13 @@
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $13.50</span>
-              <strong class="panel-title">Cesar Salad</strong><br>
-               Romaine Lettuce – Shaved Parmesan – Anchovies dressing
+              <strong class="panel-title">Caesar Salad</strong><br>
+               Romaine Lettuce – Shaved Parmesan – Anchovies Dressing
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $12.50</span>
               <strong class="panel-title">Garden Salad</strong><br>
-               Spring mix - Tomato - Shredded carrot - Fresh herbs
+               Spring Mix - Tomato - Shredded Carrot - Fresh Herbs
             </li>
             </ul>
           </div> <!-- panel -->
@@ -598,7 +598,7 @@
               </h3>
             </div>
             <div class="panel-body">
-            see board for today's offering.
+            See board for today's offering.
             </div>
           </div> <!-- panel -->
         </div> <!-- col -->
