Changing daily soup
Soup of the day, I can change it everyday from my smartphone. I just use the syntax from others "panel-title".

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
               </h3>
             </div>
             <div class="panel-body">
-            See board for today's offering.
+              <strong class="panel-title">Creamy Mushroom Soup</strong>
             </div>
           </div> <!-- panel -->
         </div> <!-- col -->
