--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
           </div>
           <ul class="list-group">
             <li class = "list-group-item">
-              Topped with powder sugar
+              Topped with powder sugar. Served with whipped cream and maple syrup
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> +$2.00</span>
@@ -360,23 +360,11 @@
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> +$2.00</span>
-              Homemade Chantilly
-            </li>
-            <li class = "list-group-item">
-              <span class = "badge pull-right"> +$2.00</span>
-              Homemade Granola
-            </li>
-            <li class = "list-group-item">
-              <span class = "badge pull-right"> +$2.00</span>
               Sliced Bannana
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> +$2.00</span>
-              Market Berries
-            </li>
-            <li class = "list-group-item">
-              <span class = "badge pull-right"> +$2.00</span>
-              Homemade Ricotta
+              Fruits
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> +$2.00</span>
@@ -532,23 +520,28 @@
             <li class = "list-group-item">
               <span class = "badge pull-right"> $11.50</span>
               <strong class="panel-title">Veggie</strong><br>
-               Lettuce – Shredded Carrot – Tomato – Red onions with a spread of Vegan Mayonnaise.
+               Romaine Heart – Shredded Carrot – Tomato – Red onions with a spread of Mayonnaise.
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $11.50</span>
               <strong class="panel-title">Ham and Cheese</strong><br>
-               Black Forest Ham – Swiss cheese with a spread of butter and Cornichons.
+               Black Forest Ham – Gruyere cheese with a spread of butter and Cornichons.
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $11.50</span>
               <strong class="panel-title">Turkey</strong><br>
-               Oven roasted turkey - Provolone - Argula - Red onion - Tomato - Dijonaise.
+               Oven roasted turkey - Provolone Cheese - Argula - Red onion - Tomato - Dijonaise.
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $11.50</span>
               <strong class="panel-title">Tuna Melt</strong><br>
-               Tuna Salad - Tomato - Cheddar.
+               Tuna Salad Tarragon and Lemon - Tomato - Cheddar Cheese.
             </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $15.50</span>
+              <strong class="panel-title">Chef's Special</strong><br>
+                Baked Camembert - Home Made Creme Fraiche - Tomato - Herbes de Provence
+              </li>
             </ul>
           </div> <!-- panel -->
         </div> <!-- col -->
@@ -567,23 +560,28 @@
             <li class = "list-group-item">
               <span class = "badge pull-right"> $13.50</span>
               <strong class="panel-title">Chef’s Salad</strong><br>
-              Spring Mix – Black Ham Forest – Gruy&aecute;re – Boiled Eggs
+              Romaine Heart – Black Ham Forest – Gruyere cheese – Boiled Eggs
             </li>
             <li class = "list-group-item">
-              <span class = "badge pull-right"> $11.50</span>
+              <span class = "badge pull-right"> $12.50</span>
               <strong class="panel-title">Rocket Salad</strong><br>
-               Argula – Shaved Pecarino Cheese – Olive Oil – Sea Salt – Pepper
+               Argula – Shaved Pecarino Cheese – Olive Oil – Sea Salt – Cracked Pepper - Pine Nuts
             </li>
             <li class = "list-group-item">
-              <span class = "badge pull-right"> $13.50</span>
+              <span class = "badge pull-right"> $12.50</span>
               <strong class="panel-title">Caesar Salad</strong><br>
-               Romaine Lettuce – Shaved Parmesan – Anchovies Dressing
+               Romaine Lettuce – Shaved Parmesan Cheese – Anchovies Dressing
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $12.50</span>
               <strong class="panel-title">Garden Salad</strong><br>
-               Spring Mix - Tomato - Shredded Carrot - Fresh Herbs
+               Romaine Lettuce - Tomato - Shredded Carrot - Fresh Herbs - Sliced Almonds - Black Olives and Chives
             </li>
+            <li classe = "list-group-item">
+              <span class = "badge pull-right"> $12.50</span>
+              <strong class="panel-title">Caprese Salad</strong><br>
+                Tomato - Mozarella Cheese - Basil - Sea salt Cracked Pepper - Olive Oil
+              </li>
             </ul>
           </div> <!-- panel -->
         </div> <!-- col -->
