--- a/index.html
+++ b/index.html
@@ -337,6 +337,10 @@
               <span class = "badge pull-right"> $2.00</span>
               Cookie
             </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $7.50</span>
+              Key Lime Pie
+            </li>
           </ul>
         </div>
       
@@ -514,18 +518,23 @@
             <ul class="list-group">
             <li class = "list-group-item">
               <span class = "badge pull-right"> $11.50</span>
-              <strong class="panel-title">Mediterranean Sandwich</strong><br>
-               Homemade tapenade – Goat cheese – Sliced Tomato – Herbes de Provence. 
+              <strong class="panel-title">Mediterranean Panini</strong><br>
+               Homemade tapenade – Goat cheese – Sliced Tomato – Herbes de Provence - Conch Bread. 
             </li>
             <li class = "list-group-item">
-              <span class = "badge pull-right"> $11.50</span>
+              <span class = "badge pull-right"> $13.50</span>
               <strong class="panel-title">Veggie</strong><br>
-               Romaine Heart – Shredded Carrot – Tomato – Red onions with a spread of Mayonnaise.
+               Tomato - Pea Sprouts - Carrot - Red Onion - Avocado - Veganaise - Key West Sourdough.
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $11.50</span>
-              <strong class="panel-title">Ham and Cheese</strong><br>
-               Black Forest Ham – Gruyere cheese with a spread of butter and Cornichons.
+              <strong class="panel-title">Ham and Cheese Panini</strong><br>
+               Ham – Gruyere cheese - Dijon - Cornichon - Conch Bread.
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $12.50</span>
+              <strong class="panel-title">Grilled Cheese Panini</strong><br>
+                Cheddar - Gruyere - Sharp White Cheddar - Key West Sourdough.
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $11.50</span>
@@ -533,14 +542,19 @@
                Oven roasted turkey - Provolone Cheese - Argula - Red onion - Tomato - Dijonaise.
             </li>
             <li class = "list-group-item">
-              <span class = "badge pull-right"> $11.50</span>
+              <span class = "badge pull-right"> $12.50</span>
               <strong class="panel-title">Tuna Melt</strong><br>
-               Tuna Salad Tarragon and Lemon - Tomato - Cheddar Cheese.
+               Tuna Salad Tarragon and Lemon - Tomato - Cheddar Cheese - Key West Sourdough.
             </li>
             <li class = "list-group-item">
-              <span class = "badge pull-right"> $15.50</span>
-              <strong class="panel-title">Chef's Special</strong><br>
-                Baked Camembert - Home Made Creme Fraiche - Tomato - Herbes de Provence
+              <span class = "badge pull-right"> $13.50</span>
+              <strong class="panel-title">Chicken Pesto Panini</strong><br>
+                Rosted chicken - Walnut Pesto - Oven Roasted Tomato - Conch Bread.
+            </li>
+            <li class = "list-group-item">
+              <span class = "badge pull-right"> $13.50</span>
+              <strong class="panel-title">Rooster</strong><br>
+                Chicken Curry - Currant - Toasted almonds - Walnut Cranberry Bread.
               </li>
             </ul>
           </div> <!-- panel -->
@@ -559,28 +573,33 @@
             <ul class="list-group">
             <li class = "list-group-item">
               <span class = "badge pull-right"> $13.50</span>
-              <strong class="panel-title">Chef’s Salad</strong><br>
-              Romaine Heart – Black Ham Forest – Gruyere cheese – Boiled Eggs
+              <strong class="panel-title">Frisee</strong><br>
+              Lardons - Moulet Egg - Heirloom Tomato - Croutons - Champagne Vinaigrette.
             </li>
             <li class = "list-group-item">
-              <span class = "badge pull-right"> $12.50</span>
+              <span class = "badge pull-right"> $11.50</span>
               <strong class="panel-title">Rocket Salad</strong><br>
-               Argula – Shaved Pecarino Cheese – Olive Oil – Sea Salt – Cracked Pepper - Pine Nuts
+               Shaved Pecarino Cheese – Olive Oil – Sea Salt – Cracked Pepper.
             </li>
             <li class = "list-group-item">
               <span class = "badge pull-right"> $12.50</span>
               <strong class="panel-title">Caesar Salad</strong><br>
-               Romaine Lettuce – Shaved Parmesan Cheese – Anchovies Dressing
+               Torn Croutons - Shaved Parmesan - Home Made Anchovies Dressing.
             </li>
             <li class = "list-group-item">
-              <span class = "badge pull-right"> $12.50</span>
+              <span class = "badge pull-right"> $11.50</span>
               <strong class="panel-title">Garden Salad</strong><br>
-               Romaine Lettuce - Tomato - Shredded Carrot - Fresh Herbs - Sliced Almonds - Black Olives and Chives
+               Romaine Lettuce - Tomato - Carrot - Cucumber - Heirloom Tomato.
             </li>
             <li classe = "list-group-item">
               <span class = "badge pull-right"> $12.50</span>
-              <strong class="panel-title">Caprese Salad</strong><br>
-                Tomato - Mozarella Cheese - Basil - Sea salt Cracked Pepper - Olive Oil
+              <strong class="panel-title">Greek Salad</strong><br>
+                Cucumber - Tomato - Feta - Heirloom Lettuce - Red Wine Olive oil Vinaigrette.
+              </li>
+              <li class = "list-group-item">
+              <span class = "badge pull-right"> $14.50</span>
+              <strong class="panel-title">Cobb Salad</strong><br>
+                Neuske Bacon - Tomato - Egg - Roast Chicken - Avocado - Gorgonzola - House Vinaigrette or Ranch.
               </li>
             </ul>
           </div> <!-- panel -->
